--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,22 @@
 <h1>Hello there!</h1>
+<form action="/result" method="post">
+  <h2>What's your name?</h2>
+  <input type="text" name="name">
+  <h2>When's your birthday?</h2>
+  <h3>day: </h3> <input type="text" name="day">
+  <h3>month: </h3>
+  <select name="select-month">
+    <option value="january">January</option>
+    <option value="february">February</option>
+    <option value="march">March</option>
+    <option value="april">April</option>
+    <option value="may">May</option>
+    <option value="june">June</option>
+    <option value="july">July</option>
+    <option value="august">August</option>
+    <option value="september">September</option>
+    <option value="october">October</option>
+    <option value="november">November</option>
+    <option value="december">December</option>
+  </select>
+  <button type="submit" name="go">Go!</button>
