added a test for happy birthday

--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
   <h2>When's your birthday?</h2>
   <h3>day: </h3> <input type="text" name="day">
   <h3>month: </h3>
-  <select name="select-month">
+  <select name="select_month">
     <option value="january">January</option>
     <option value="february">February</option>
     <option value="march">March</option>
